fix errors on html code

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -44,12 +44,13 @@
               <li class="search"><label for="search">search</label></li>
               <li class="search"><input name="search" placeholder="search" type="search" id="search"></li>
               <li class="search"><button type="button">&#128269;</button></li>
-            </ul> 
+            </ul>
           </nav>
         </div>
-
+      </div>
     </header>
-   
+
+
     <!-- call class main div ,section -->
     <main>
       <div class="cuecard">
@@ -58,18 +59,19 @@
             <!-- place image office scene background and header 1  -->
             <!-- <img class="main-banner" src="./images/main-banner.jpg" alt="office scene"> -->
             <h1>Welcome to Three Star Media</h1>
-          </div>
-          <!---https://loremipsum.io/generator/?n=5&t=p -->
-          <!-- call class p1  -->
-          <div>
-            <P class="p1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore et
-              dolore.
-              magna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id
-              agna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id faucibus nisl tincidunt eget
-              nullam.</P>
-          </div>
 
+            <!---https://loremipsum.io/generator/?n=5&t=p -->
+            <!-- call class p1  -->
+            <div>
+              <P class="p1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut
+                labore et
+                dolore.
+                magna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id
+                agna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id faucibus nisl tincidunt eget
+                nullam.</P>
+            </div>
+          </div>
 
           <!-- created button that connect with us
     https://www.w3schools.com/charsets/ref_utf_arrows.asp
@@ -90,44 +92,43 @@ for Button
           <img class="about-pocket" src="images/about-us.jpg" alt="ping pong table office scene">
 
           <h2 class="aboutus">About Us</h2>
+
+
+
+          <div>
+            <!-- paragrph call class -->
+            <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et
+              dolore
+              magna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id faucibus nisl tincidunt </p>
+            <p class="p2">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. Elit sed vulputate mi sit amet mauris
+            </p>
+          </div>
         </div>
-  </div>
-
-  <div>
-    <!-- paragrph call class -->
-    <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-      labore et
-      dolore
-      magna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id faucibus nisl tincidunt </p>
-    <p class="p2">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-      dolore
-      magna aliqua. Elit sed vulputate mi sit amet mauris
-    </p>
-
-    </section>
-
-  </div>
-  </div>
-  <!-- call class of div whole our service , hdic to h1
+      </section>
+      <!-- call class of div whole our service , hdic to h1
 class button to digital-device  -->
-  <div class="serv">
-    <div id="service">
-      <h1>Our Services</h1>
-    </div>
-    <img class="digital-device" src="images/digital.jpg" alt="desktop and person holding a smartphone our Services">
-  </div>
-  <!-- call class of div digital transformation , paragrahy p3-->
-  <div class="digialpoc">
-    <h3>Digial Transformation</h3>
-    <div>
-      <p class="p3">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Elit sed vulputate mi sit amet mauris
-      </p>
-    </div>
+      <div class="serv">
+        <div id="service">
+          <h1>Our Services</h1>
+        </div>
+        <img class="digital-device" src="images/digital.jpg" alt="desktop and person holding a smartphone our Services">
+      </div>
+      <!-- call class of div digital transformation , paragrahy p3-->
+      <div class="digialpoc">
+        <h3>Digial Transformation</h3>
+        <div>
+          <p class="p3">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Elit sed vulputate mi sit amet mauris
+          </p>
+        </div>
 
-    <!-- created button that connect with us
+        <!-- created button that connect with us
     https://www.w3schools.com/charsets/ref_utf_arrows.asp
    https://www.w3schools.com/charsets/tryit.asp?deci=11208
    Misc Symbols and Arrows-UTF-8 arrows
@@ -135,219 +136,224 @@ Hex 2B00-2BFF / Ddec 11008-11263 side ways triangle point right
 for Button
 seletive class button week 10 example html code vs code
    -->
-    <div class="digbutton">
-      <a href="#" class="buttons" target="_blank"> Digitial Plan &#11208; </a>
-    </div>
-  </div>
-  <!-- call class market for image and title h1 -->
-  <!-- get Notes week 3 and 4 VSCode ID  -->
-  <div>
-    <img class="market" src="images/marketing.jpg" alt=" marketing laptop sit on desk">
-    <div class="marking">
-      <h1> Marketing</h1>
-    </div>
-  </div>
-  <!-- class p4 paragrphy  -->
-  <div>
-    <p class="p4">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Elit sed vulputate mi sit amet mauris
-
-    </p>
-    <!-- seletive class button week 10 example html code vs code-->
-    <div>
-      <a class="plans" href="#" class="button-s" target="_blank">Marketing Plans &#11208; </a>
-    </div>
-    <!-- section class video whole , image class -->
-    <section class="videos">
-      <div>
-        <img class="video-1" src="images/video.jpg" alt="video a hand holdering smartphone">
-      </div>
-      <!-- h2 class header 2 and paragraphy -->
-      <div>
-        <h2 class="Pro">Video Production</h2>
-      </div>
-      <p class="p5"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et dolore
-        magna aliqua. Elit sed vulputate mi sit amet mauris</p>
-      <div class="videoplans"> <a href="#" class="buttons" target="_blank"> VideoPlans &#11208; </a>
-      </div>
-    </section>
-  </div>
-  <!-- section call whole thing web deveopment image  -->
-  <section class="webdev">
-
-    <div>
-      <img class="webs" src="images/web.jpg" alt=" wed developement">
-    </div>
-    <div>
-      <h2 class="webdevepment">Web developement </h2>
-    </div>
-    <div>
-      <p class="p6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et dolore
-        magna aliqua. Elit sed vulputate mi sit amet mauris</p>
-    </div>
-    <!-- button div class week
-        get week 10 VSCode notes  -->
-    <div> <a class="videoplans" href="#" class="buttons" target="_blank"> VideoPlans &#11208; </a>
-  </section>
-  <!-- section news class and  image  -->
-  <section class="news">
-    <div>
-      <img class="newspaper-boxes" src="images/print.jpg" alt=" newspaper boxes">
-    </div>
-    <div>
-      <h2 class="print"> Print</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Elit sed vulputate mi sit amet mauris</p>
-    </div>
-    <!-- class button 
-  button div class week
-        get week 10 VSCode notes  -->
-    <div> <a class="printplans" href="#" class="buttons" target="_blank"> Print Plans &#11208;</a>
-    </div>
-  </section>
-  <!-- section  of vision  -->
-  <section class="visionss">
-    <div>
-      <img class="vision" src="images/vision.jpg" alt="paper boats floating ">
-
-      <div>
-        <h2 class="our"> Our Vision</h2>
-        <p class="p7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore
-          magna aliqua. Elit sed vulputate mi sit amet mauris</p>
-      </div>
-      <!-- anchor class for button  -->
-      <!-- button div class week
-        get week 10 VSCode notes  -->
-      <div> <a class="learn" href="#" class="buttons" target="_blank"> Learn More &#11208;</a>
-      </div>
-  </section>
-
-
-  <!-- div whole to end of page section teams card -->
-
-
-  <Section class="teams">
-    <div class="team-poc">
-      <div id="team">
-        <h1>Our Team</h1>
-      </div>
-      <div>
-        <img class="john" src="images/john.jpg" alt="">
-      </div>
-      <div class="titles">
-        <h2>John Doe</h2>
-        <h3>CEO and Co-owner</h3>
-      </div>
-    </div>
-
-
-    <p class="p8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-      labore et dolore
-      magna aliqua. Elit sed vulputate mi sit amet mauris</p>
-
-
-  </section>
-  <!-- div whole to end of page section team card -->
-  <section class="team">
-    <div class="teampocket">
-      <div>
-        <img class="bob" src="images/bob.jpg" alt="">
-      </div>
-      <div class="title">
-        <h2>Bob Rite</h2>
-        <h3>CFO and Co-owner</h3>
-
-        <p class="p9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore et
-          dolore
-          magna aliqua. Elit sed vulputate mi sit amet mauris</p>
-
-      </div>
-    </div>
-  </section>
-
-
-  <!-- section class contact page with forms and maps -->
-  <section class="contactpocket">
-    <div class="contact">
-      <div id="contactus">
-        <h1> Contact Us</h1>
-
-
-        <div>
-          <h2 class="send">Send us a Message </h2>
-          <!-- my Midterm project  how to create a form and IMD Websitese  Notes Weeks 3 and 4.  -->
+        <div class="digbutton">
+          <a href="#" class="buttons" target="_blank"> Digitial Plan &#11208; </a>
         </div>
-        <section class="forms">
+      </div>
+      <!-- call class market for image and title h1 -->
+      <!-- get Notes week 3 and 4 VSCode ID  -->
+      <div>
+        <img class="market" src="images/marketing.jpg" alt=" marketing laptop sit on desk">
+        <div class="marking">
+          <h1> Marketing</h1>
+        </div>
+      </div>
+      <!-- class p4 paragrphy  -->
+      <div>
+        <p class="p4">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Elit sed vulputate mi sit amet mauris
 
-          <form class="form" method="post" action="thankyou.html">
-            <ul>
-              <li> <label for="fullname"> Full Name</label></li>
-              <li><input name="fullname" id="fullname" type="text" required>
-              </li>
-
-              <li>
-                <label for="emails">Emails</label> </li>
-              <li><input name="emails" id="emails" type="email" required>
-              </li>
-
-              <li>
-                <label for="messages">Messages</label></li>
-              <li><textarea name="messages" id="messages"></textarea>
-              </li>
-              <li><button type="button">submit</button></li>
-            </ul>
-          </form>
-        </section>
-        <!-- Week 4 VS code notes how create tables
-                and IMD Website Notes and tables -->
-        <section class="">
-          <div class="open-close">
-            <table>
-              <thead>
-                <tr>
-
-                  <th colspan="2"> Days</th>
-                  <th rowspan="3"> Hours </th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td> Monday- Friday</td>
-                  <td>9AM-6PM</td>
-                </tr>
-                <tr>
-                  <td>Saturday-Sunday</td>
-                  <td> Closed </td>
-                </tr>
-              </tbody>
-            </table>
-
-            <section class="heading">
-              <h2>Location</h2>
-            </section>
-
+        </p>
+        <!-- seletive class button week 10 example html code vs code-->
+        <div>
+          <a class="plans" href="#" class="button-s" target="_blank">Marketing Plans &#11208; </a>
+        </div>
+        <!-- section class video whole , image class -->
+        <section class="videos">
+          <div>
+            <img class="video-1" src="images/video.jpg" alt="video a hand holdering smartphone">
+          </div>
+          <!-- h2 class header 2 and paragraphy -->
+          <div>
+            <h2 class="Pro">Video Production</h2>
+          </div>
+          <p class="p5"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore
+            magna aliqua. Elit sed vulputate mi sit amet mauris</p>
+          <div class="videoplans"> <a href="#" class="buttons" target="_blank"> VideoPlans &#11208; </a>
           </div>
         </section>
-        </main>
       </div>
-      <!--  footer copyright and home jumpback to home page  -->
-      <footer class="footer">
-        Copyright &copy;Three Star Media ,2020
-        All images are taken from Unsplash
-      </footer>
-      <!-- get Notes week 3 and 4 VSCode  -->
-      <span id="home">
-        <h2>homeback</h2>
-      </span>
-      <a href="#home">Home</a>
+      <!-- section call whole thing web deveopment image  -->
+      <section class="webdev">
 
-    </div>
-    </div>
+        <div>
+          <img class="webs" src="images/web.jpg" alt=" wed developement">
+        </div>
+        <div>
+          <h2 class="webdevepment">Web developement </h2>
+        </div>
+        <div>
+          <p class="p6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore
+            magna aliqua. Elit sed vulputate mi sit amet mauris</p>
+        </div>
+        <!-- button div class week
+        get week 10 VSCode notes  -->
+        <div> <a class="videoplans" href="#" class="buttons" target="_blank"> VideoPlans &#11208; </a>
+        </div>
+      </section>
+      <!-- section news class and  image  -->
+      <section class="news">
+        <div>
+          <img class="newspaper-boxes" src="images/print.jpg" alt=" newspaper boxes">
+        </div>
+        <div>
+          <h2 class="print"> Print</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Elit sed vulputate mi sit amet mauris</p>
+        </div>
+        <!-- class button 
+  button div class week
+        get week 10 VSCode notes  -->
+        <div> <a class="printplans" href="#" class="buttons" target="_blank"> Print Plans &#11208;</a>
+        </div>
+      </section>
+      <!-- section  of vision  -->
+      <section class="visionss">
+        <div>
+          <img class="vision" src="images/vision.jpg" alt="paper boats floating ">
+
+          <div>
+            <h2 class="our"> Our Vision</h2>
+            <p class="p7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore
+              magna aliqua. Elit sed vulputate mi sit amet mauris</p>
+          </div>
+          <!-- anchor class for button  -->
+          <!-- button div class week
+        get week 10 VSCode notes  -->
+          <div> <a class="learn" href="#" class="buttons" target="_blank"> Learn More &#11208;</a>
+          </div>
+      </section>
+
+
+      <!-- div whole to end of page section teams card -->
+
+
+      <Section class="teams">
+        <div class="team-poc">
+          <div id="team">
+            <h1>Our Team</h1>
+          </div>
+          <div>
+            <img class="john" src="images/john.jpg" alt="">
+          </div>
+          <div class="titles">
+            <h2>John Doe</h2>
+            <h3>CEO and Co-owner</h3>
+          </div>
+        </div>
+
+
+        <p class="p8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore
+          magna aliqua. Elit sed vulputate mi sit amet mauris</p>
+
+
+      </section>
+      <!-- div whole to end of page section team card -->
+      <section class="team">
+        <div class="teampocket">
+          <div>
+            <img class="bob" src="images/bob.jpg" alt="">
+          </div>
+          <div class="title">
+            <h2>Bob Rite</h2>
+            <h3>CFO and Co-owner</h3>
+
+            <p class="p9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+              ut labore et
+              dolore
+              magna aliqua. Elit sed vulputate mi sit amet mauris</p>
+
+          </div>
+        </div>
+      </section>
+
+
+      <!-- section class contact page with forms and maps -->
+      <section class="contactpocket">
+        <div class="contact">
+          <div id="contactus">
+            <h1> Contact Us</h1>
+
+
+            <div>
+              <h2 class="send">Send us a Message </h2>
+              <!-- my Midterm project  how to create a form and IMD Websitese  Notes Weeks 3 and 4.  -->
+            </div>
+            <div class="forms">
+
+              <form class="form" method="post" action="thankyou.html">
+                <ul>
+                  <li> <label for="fullname"> Full Name</label></li>
+                  <li><input name="fullname" id="fullname" type="text" required>
+                  </li>
+
+                  <li>
+                    <label for="emails">Emails</label> </li>
+                  <li><input name="emails" id="emails" type="email" required>
+                  </li>
+
+                  <li>
+                    <label for="messages">Messages</label></li>
+                  <li><textarea name="messages" id="messages"></textarea>
+                  </li>
+                  <li><button type="button">submit</button></li>
+                </ul>
+              </form>
+            </div>
+      </section>
+      <!-- Week 4 VS code notes how create tables
+                and IMD Website Notes and tables -->
+      <section class="">
+        <div class="open-close">
+          <table>
+            <thead>
+              <tr>
+                <th colspan="2"> Days</th>
+                <th rowspan="3"> Hours </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td> Monday- Friday</td>
+                <td>9AM-6PM</td>
+              </tr>
+              <tr>
+                <td>Saturday-Sunday</td>
+                <td> Closed </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <section class="heading">
+            <h2>Location</h2>
+          </section>
+
+        </div>
+      </section>
+
+  </div>
+  </main>
+
+  <!--  footer copyright and home jumpback to home page  -->
+  <footer class="footer">
+    Copyright &copy;Three Star Media ,2020
+    All images are taken from Unsplash
+  </footer>
+  <!-- get Notes week 3 and 4 VSCode  -->
+  <span id="homes">
+    <h2>homeback</h2>
+  </span>
+  <a href="#homes">Home</a>
+
+
+  </div>
+
 </body>
 
 </html>
