fix errors on html code

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -191,7 +191,7 @@ seletive class button week 10 example html code vs code
         </div>
         <!-- button div class week
         get week 10 VSCode notes  -->
-        <div> <a class="videoplans" href="#" class="buttons" target="_blank"> VideoPlans &#11208; </a>
+        <div> <a class="videoplans" href="#" class="button-s" target="_blank"> VideoPlans &#11208; </a>
         </div>
       </section>
       <!-- section news class and  image  -->
@@ -208,7 +208,7 @@ seletive class button week 10 example html code vs code
         <!-- class button 
   button div class week
         get week 10 VSCode notes  -->
-        <div> <a class="printplans" href="#" class="buttons" target="_blank"> Print Plans &#11208;</a>
+        <div> <a class="printplans" href="#" class="button-s" target="_blank"> Print Plans &#11208;</a>
         </div>
       </section>
       <!-- section  of vision  -->
@@ -216,7 +216,7 @@ seletive class button week 10 example html code vs code
         <div>
           <img class="vision" src="images/vision.jpg" alt="paper boats floating ">
 
-          <div>
+             <div>
             <h2 class="our"> Our Vision</h2>
             <p class="p7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
               labore et dolore
@@ -225,7 +225,7 @@ seletive class button week 10 example html code vs code
           <!-- anchor class for button  -->
           <!-- button div class week
         get week 10 VSCode notes  -->
-          <div> <a class="learn" href="#" class="buttons" target="_blank"> Learn More &#11208;</a>
+          <div> <a class="learn" href="#" class="button-s" target="_blank"> Learn More &#11208;</a>
           </div>
       </section>
 
