--- a/final-project/index.html
+++ b/final-project/index.html
@@ -157,7 +157,7 @@ seletive class button week 10 example html code vs code
         </p>
         <!-- seletive class button week 10 example html code vs code-->
         <div>
-          <a class="plans" href="#" class="button-s" target="_blank">Marketing Plans &#11208; </a>
+          <a class="plans button-s" href="#" target="_blank">Marketing Plans &#11208; </a>
         </div>
         <!-- section class video whole , image class -->
         <section class="videos">
@@ -332,6 +332,11 @@ seletive class button week 10 example html code vs code
 
           <section class="heading">
             <h2>Location</h2>
+            <!-- https://maps.app.goo.gl/o6mMxJkCFUtnVEWn7    https://www.google.com/maps/@45.3428378,-75.7492287,14z?entry=ttu -->
+           <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22434.367609880253!2d-75.74922865!3d45.3428378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1701220444318!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           </div>
+          
           </section>
 
         </div>
