fixed html errors

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -191,7 +191,7 @@ seletive class button week 10 example html code vs code
         </div>
         <!-- button div class week
         get week 10 VSCode notes  -->
-        <div> <a class="videoplans" href="#" class="button-s" target="_blank"> VideoPlans &#11208; </a>
+        <div> <a class="videoplans" href="#" target="_blank"> VideoPlans &#11208; </a>
         </div>
       </section>
       <!-- section news class and  image  -->
@@ -208,7 +208,7 @@ seletive class button week 10 example html code vs code
         <!-- class button 
   button div class week
         get week 10 VSCode notes  -->
-        <div> <a class="printplans" href="#" class="button-s" target="_blank"> Print Plans &#11208;</a>
+        <div> <a class="printplans" href="#"  target="_blank"> Print Plans &#11208;</a>
         </div>
       </section>
       <!-- section  of vision  -->
@@ -216,7 +216,7 @@ seletive class button week 10 example html code vs code
         <div>
           <img class="vision" src="images/vision.jpg" alt="paper boats floating ">
 
-             <div>
+          <div>
             <h2 class="our"> Our Vision</h2>
             <p class="p7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
               labore et dolore
@@ -225,7 +225,7 @@ seletive class button week 10 example html code vs code
           <!-- anchor class for button  -->
           <!-- button div class week
         get week 10 VSCode notes  -->
-          <div> <a class="learn" href="#" class="button-s" target="_blank"> Learn More &#11208;</a>
+          <div> <a class="learn" href="#"  target="_blank"> Learn More &#11208;</a></div>
           </div>
       </section>
 
@@ -279,8 +279,6 @@ seletive class button week 10 example html code vs code
         <div class="contact">
           <div id="contactus">
             <h1> Contact Us</h1>
-
-
             <div>
               <h2 class="send">Send us a Message </h2>
               <!-- my Midterm project  how to create a form and IMD Websitese  Notes Weeks 3 and 4.  -->
@@ -306,12 +304,16 @@ seletive class button week 10 example html code vs code
                 </ul>
               </form>
             </div>
+          </div>
+            </div>
       </section>
       <!-- Week 4 VS code notes how create tables
                 and IMD Website Notes and tables -->
       <section class="">
         <div class="open-close">
+          
           <table>
+            <caption>Hours of Operation</caption>
             <thead>
               <tr>
                 <th colspan="2"> Days</th>
@@ -322,21 +324,22 @@ seletive class button week 10 example html code vs code
               <tr>
                 <td> Monday- Friday</td>
                 <td>9AM-6PM</td>
-              </tr>
-              <tr>
                 <td>Saturday-Sunday</td>
                 <td> Closed </td>
               </tr>
             </tbody>
           </table>
-
+        </section>
           <section class="heading">
             <h2>Location</h2>
             <!-- https://maps.app.goo.gl/o6mMxJkCFUtnVEWn7    https://www.google.com/maps/@45.3428378,-75.7492287,14z?entry=ttu -->
-           <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22434.367609880253!2d-75.74922865!3d45.3428378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1701220444318!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-           </div>
-          
+            <div>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22434.367609880253!2d-75.74922865!3d45.3428378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1701220444318!5m2!1sen!2sca"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
           </section>
 
         </div>
