fix errors html

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -333,6 +333,7 @@ seletive class button week 10 example html code vs code
           <section class="heading">
             <h2>Location</h2>
             <!-- https://maps.app.goo.gl/o6mMxJkCFUtnVEWn7    https://www.google.com/maps/@45.3428378,-75.7492287,14z?entry=ttu -->
+           <section>
             <div>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22434.367609880253!2d-75.74922865!3d45.3428378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1701220444318!5m2!1sen!2sca"
