fix html code form errors

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -309,7 +309,7 @@ seletive class button week 10 example html code vs code
       </section>
       <!-- Week 4 VS code notes how create tables
                 and IMD Website Notes and tables -->
-      <section class="hours">
+      <section>
         <div>
           <table>
             <caption>Hours of Operation</caption>
