adds google font to html and css code. Css add body code

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -6,6 +6,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to Three Star Media </title>
+
+  <!-- google font styles links https://fonts.google.com/specimen/Open+Sans?query=open+sans  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;1,400&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -145,7 +152,7 @@ seletive class button week 10 example html code vs code
       <div>
         <img class="market" src="images/marketing.jpg" alt=" marketing laptop sit on desk">
         <div class="marking">
-          <h1> Marketing</h1>
+          <h4> Marketing</h4>
         </div>
       </div>
       <!-- class p4 paragrphy  -->
@@ -200,7 +207,7 @@ seletive class button week 10 example html code vs code
           <img class="newspaper-boxes" src="images/print.jpg" alt=" newspaper boxes">
         </div>
         <div>
-          <h2 class="print"> Print</h2>
+          <h5 class="print"> Print</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. Elit sed vulputate mi sit amet mauris</p>
@@ -217,7 +224,7 @@ seletive class button week 10 example html code vs code
           <img class="vision" src="images/vision.jpg" alt="paper boats floating ">
 
           <div>
-            <h2 class="our"> Our Vision</h2>
+            <h6 class="our"> Our Vision</h6>
             <p class="p7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
               labore et dolore
               magna aliqua. Elit sed vulputate mi sit amet mauris</p>
@@ -236,7 +243,7 @@ seletive class button week 10 example html code vs code
       <Section class="teams">
         <div class="team-poc">
           <div id="team">
-            <h5>Our Team</h5>
+            <h6>Our Team</h6>
           </div>
           <div>
             <img class="john" src="images/john.jpg" alt="">
