add clas to html connect with us

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -36,6 +36,7 @@
               <li>
                 <div id="home"></div>
               </li>
+
               <li><a href="#">Home</a></li>
               <li><a href="#aboutus">About Us</a></li>
               <li><a href="#service">Services</a></li>
@@ -75,8 +76,7 @@
                 labore et
                 dolore.
                 magna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id
-                agna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id faucibus nisl tincidunt eget
-                nullam.</P>
+                .</P>
             </div>
           </div>
 
@@ -88,7 +88,7 @@ Hex 2B00-2BFF / Ddec 11008-11263 side ways triangle point right
 for Button
    -->
           <!-- seletive class button week 10 example html code vs code-->
-          <div class="button1"><a href="#" class="buttons" target="_blank">Connect with us &#11208; </a> </div>
+          <div class="button1"><a class="cons" href="#" class="buttons" target="_blank">Connect with us &#11208; </a> </div>
         </Section>
       </div>
 
@@ -120,7 +120,7 @@ for Button
 class button to digital-device  -->
       <div class="serv">
         <div id="service">
-          <h1>Our Services</h1>
+          <h2>Our Services</h2>
         </div>
         <img class="digital-device" src="images/digital.jpg" alt="desktop and person holding a smartphone our Services">
       </div>
