add class to html anchor tag and css background about us and try ofix tool bar

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -37,11 +37,11 @@
                 <div id="home"></div>
               </li>
 
-              <li><a href="#">Home</a></li>
-              <li><a href="#aboutus">About Us</a></li>
-              <li><a href="#service">Services</a></li>
-              <li><a href="#team">Team</a></li>
-              <li><a href="#contactus">Contact</a></li>
+              <li><a class="tol" href="#">Home</a></li>
+              <li><a class="tol" href="#aboutus">About Us</a></li>
+              <li><a class="tol" href="#service">Services</a></li>
+              <li><a class="tol" href="#team">Team</a></li>
+              <li><a class="tol" href="#contactus">Contact</a></li>
               <!-- week 4 and week 5 IMD Note website and my web dev 1 mid-term project referance 
             https://www.w3schools.com/tags/att_input_type_radio.asp  understanding radio button-need same name sync togther  My web dev 1 Mid-term project code referance for magnifying glass symbol https://www.w3schools.com/charsets/ref_emoji_symbols.asp   Left magnifying glass symbol
           magnifying glass symbol
@@ -94,7 +94,7 @@ for Button
 
 
       <!-- call class of section div and image about us  -->
-      <section class="aboutus">
+      <section class="about">
         <div class="cardabout">
           <img class="about-pocket" src="images/about-us.jpg" alt="ping pong table office scene">
 
