add css code max-width and margin and add html  class

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -22,7 +22,7 @@
   <!-- week 4 note website and web dev 1 midterm project create image  nav bar  -->
   <body>
     <div class="boxset">
-      <header>
+      <header class="width-max margin">
         <div>
           <nav>
             <ul>
@@ -37,6 +37,7 @@
             </ul>
             <ul>
               <li class="search">
+                c
                 <label for="search">Search</label>
               </li>
               <li class="search">
@@ -271,7 +272,6 @@
             </div>
           </section>
           <section class="maps">
-            6
             <div class="width-max margin">
               <h2>Location</h2>
               <div>
