fix button class

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -26,14 +26,13 @@
         <div>
           <nav>
             <ul>
-              <li>
-                <img class="star-logo" src="./images/logo.png" alt="star" />
-              </li>
-              <li><a href="#">Home</a></li>
-              <li><a href="#aboutus">About Us</a></li>
-              <li><a href="#service">Service</a></li>
-              <li><a href="#team"></a>Team</li>
-              <li><a href="#contactus">Coontact</a></li>
+              
+              <li><img class="star-logo" src="./images/logo.png" alt="star" />
+                <a class="to-bar" href="#">Home</a></li>
+              <li><a class="to-bar"href="#aboutus">About Us</a></li>
+              <li><a class="to-bar"href="#service">Service</a></li>
+              <li><a class="to-bar"href="#team">Team</li>
+              <li><a class="to-bar"href="#contactus">Contact</a></li>
             </ul>
             <ul>
               <li class="search">
@@ -88,7 +87,10 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sequi, ea autem ipsam reiciendis accusamus inventore esse.
                     Magni, nihil, sit odit non aut, laudantium velit vel aperiam
-                    beatae quaerat accusantium. Sed!
+                    beatae quaerat accusantium.</p>
+                    
+                    <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perspiciatis placeat consequuntur suscipit, eveniet cumque aliquam exercitationem praesentium! Nam tempora sed eaque totam odit eos inventore odio, voluptas aspernatur quo!
                   </p>
                 </div>
               </div>
@@ -114,7 +116,7 @@
                     eveniet, maiores ea at nam modi illum, molestias,
                   </p>
                   <a href="#" class="button" target="_blank">
-                    Digital Plan &11208</a
+                    Digital Plan &#11208;</a
                   >
                 </div>
                 <div class="mar-card">
@@ -197,19 +199,16 @@
           </section>
           <section class="team-s">
             <div id="team">
-              <div class="title-h">
-                <h6>Teams</h6>
-              </div>
-              <img class="John" src="images/john.jpg" alt="photo of john" />
-
-              <div class="ti-tex-p">
-                <h2>John Doe</h2>
-                <h3>CEO and Co-owner</h3>
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. ?
-                </p>
-              </div>
+              <h6>Teams</h6>
             </div>
+            <img class="John" src="images/john.jpg" alt="photo of john" />
+
+            <div class="ti-tex-p">
+              <h2>John Doe</h2>
+              <h3>CEO and Co-owner</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. ?</p>
+            </div>
+
             <div class="width-max margin">
               <img class="bob" src="images/bob.jpg" alt="bob phoot" />
             </div>
